syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.beauty_salon";

service AnalyticsService {
  rpc CalculateAccommodationRating (AccommodationRatingRequest) returns (AccommodationRatingResponse) {}
}

message AccommodationRatingRequest {
  int64 accommodation_id = 1;
  string category = 2;
}

message AccommodationRatingResponse {
  int64 accommodation_id = 1;
  int32 rating_score = 2;
  string verdict = 3;
}